--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.9.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "moment": "2.26.0",
@@ -10,6 +11,7 @@
     "nouislider": "14.5.0",
     "react": "16.13.1",
     "react-bootstrap-switch": "15.5.3",
+    "react-chartjs-2": "^2.10.0",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
     "react-router": "5.2.0",
